short/deployment-short-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-short-app
spec:
  replicas: 1
  selector:
    matchLabels:
      components: short-app
  template:
    metadata:
      name: short-app
      labels:
        components: short-app
    spec:
      containers:
        - name: short-app
          image: antonlarichev/short-app
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "500Mi" 
              cpu: "500m"
