short/service-short-app.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: short-app
