short/service-short.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: short-app
---
apiVersion: v1
kind: Service
metadata:
  name: short-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
  selector:
    components: short-postgres
